--- a/.github/workflows/11-filtrando-por-type.yaml
+++ b/.github/workflows/11-filtrando-por-type.yaml
@@ -1,4 +1,4 @@
-name: GitHub Actions - Push - Type Template
+name: GitHub Actions - Push - Type Templatee
 run-name: Running - ${{ github.event_name }}
 
 on:
